# playground-pyrust

./: Cargo.toml  README.md  prog01-np.py  prog01-py.py  prog01-rs.py
src/: lib.rs  myutils.rs
